chore(DATA-2106): remove leftover GTFS-RT features from ANSHAR
* migrate GTFS-RT daily statuses API from ANSHAR to GTFS-RT retriever app
* stop retrieving GTFS-RT statuses from ACTIVEMQ
* remove gtfs-realtime-bindings deps
* fix warnings